--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,17 @@
 :root {
     --color1: black;
     --color2: #040404;
-    --color3: rgb(231, 219, 179);
+    --color3: #E7DBB3;
     --color4: #4dff00;
     --color5: #E01919;
     --color6: #8913F8;
     --color7: #FFFF00;
     --color8: #1789fc;
+
+    --newPalette1: #DE7254;
+    --newPalette2: #2FC6A8;
+    --newPalette3: #AE1E4E;
+    --newPalette4: #011638;
 }
 
 body {
@@ -79,15 +84,15 @@ nav {
     justify-content: center;
     align-items: center;
     font-family: inconsolata, monospace;
-    border-bottom: 1px dashed var(--color3);
+    border-bottom: 1px dashed var(--newPalette1);
 }
 
 .project-section h1 {
-    color: var(--color5);
+    color: var(--newPalette1);
 }
 
 .project-block {
-    border: 1px solid var(--color5);
+    border: 1px solid var(--newPalette1);
     min-height: 20vh;
     width: 90%;
     margin: 10px 0;
@@ -97,9 +102,15 @@ nav {
     padding: 10px;
 }
 
+.project-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .project-block a {
     text-decoration: none;
-    color: var(--color5);
+    color: var(--newPalette1);
     margin-bottom: 50px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -111,7 +122,7 @@ nav {
     align-items: center;
     font-family: inconsolata, monospace;
     border-bottom: 1px dashed var(--color3);
-    color: var(--color6);
+    color: var(--newPalette2);
 }
 
 .about-text {
@@ -126,5 +137,5 @@ nav {
     align-items: center;
     font-family: inconsolata, monospace;
     border-bottom: 1px dashed var(--color3);
-    color: var(--color4);
+    color: var(--newPalette3);
 }
