--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,17 +145,18 @@ nav {
 #weather-dash::after {
     content: "";
     /* background-color: var(--color3); */
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: -15px;
+    right: -65px;
     z-index: -1;
     width: 0;
     height: 0;
-    border-left: 100px solid transparent;
-    border-right: 100px solid transparent;
-    border-bottom: 100px solid var(--color3);
+    border-left: 150px solid transparent;
+    border-right: 150px solid transparent;
+    border-bottom: 150px solid var(--color3);
+    transform: rotate(135deg);
 }
 
 .about-section {
