--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ nav {
     width: 2.5rem;
 }
 
-.burger {
+.patty {
     background-color: var(--color3);
     height: 2px;
     width: 100%;
@@ -112,7 +112,6 @@ nav {
     border: 1px solid var(--newPalette1);
     width: 90%;
     margin: 10px 0;
-    position: relative;
 }
 
 .project-title {
@@ -140,23 +139,6 @@ nav {
 
 .project-card a:hover {
     color: var(--color3);
-}
-
-#weather-dash::after {
-    content: "";
-    /* background-color: var(--color3); */
-    /* width: 100%; */
-    /* height: 100%; */
-    position: absolute;
-    bottom: -15px;
-    right: -65px;
-    z-index: -1;
-    width: 0;
-    height: 0;
-    border-left: 150px solid transparent;
-    border-right: 150px solid transparent;
-    border-bottom: 150px solid var(--color3);
-    transform: rotate(135deg);
 }
 
 .about-section {
