--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,12 +27,17 @@ body {
     background-color: var(--color2);
     font-family: sans-serif;
     color: white;
+    overflow-x: hidden;
+}
+
+body.hidden {
+    overflow-y: hidden;
 }
 
 nav {
     background-color: var(--color1);
     height: 50px;
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,7 +65,6 @@ nav {
     width: 3rem;
     transition: all .5s ease-in-out;
     cursor: pointer;
-    /* border: 1px solid white; */
 }
 
 .menu-btn_burger {
@@ -98,6 +102,35 @@ nav {
 }
 /* END hamburger animation */
 
+.menu-page {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    background: var(--color1);
+    top: 50px;
+    left: 0;
+    /* padding-left: 20%; */
+    transform: translateX(100vw);
+}
+
+.menu-page ul {
+    padding-left: 20%;
+}
+
+.menu-page li {
+    margin: 1rem;
+    list-style: none;
+}
+
+.menu-page li a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 2rem;
+}
+
 .jumbotron {
     display: flex;
     flex-direction: column;
@@ -115,6 +148,7 @@ nav {
 
 #icosa {
     position: absolute;
+    z-index: -1;
     top: 30vh;
     left: 3vh;
 }
