--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,8 @@ nav {
 .menu-page, .menu-page-slider {
     position: fixed;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
     height: 100vh;
     width: 100vw;
@@ -130,7 +131,7 @@ nav {
 }
 
 .menu-page ul {
-    padding-left: 20%;
+    margin-top: 20vh;
 }
 
 .menu-page li {
@@ -181,6 +182,7 @@ nav {
     font-family: open sans, sans-serif;
     border-bottom: 1px dashed var(--newPalette1);
     color: white;
+    padding-top: 10vh;
 }
 
 .project-section h1 {
