--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,22 @@ nav {
     background-color: var(--color3);
     height: 2px;
     width: 100%;
-    transition: all .5s ease-in-out;
+    transition: all 1.5s ease-in-out;
+    animation: color-wheel 21s forwards infinite;
+}
+
+@keyframes color-wheel {
+    25% {
+        background-color: var(--newPalette1);
+    }
+
+    50% {
+        background-color: var(--newPalette2);
+    }
+
+    75% {
+        background-color: var(--newPalette3);
+    }
 }
 
 #burger-top,
