--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,17 @@ nav {
     border: 1px solid var(--newPalette1);
     width: 90%;
     margin: 10px 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.project-revealer {
+    width: 100%;
+    height: 100%;
+    background-color: var(--newPalette1);
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .project-title {
@@ -217,8 +228,14 @@ nav {
     font-family: inconsolata, monospace;
 }
 
-.project-card>* {
+.project-content {
     margin: 1rem;
+    transform: translateY(120%);
+    opacity: 0;
+}
+
+.project-footer {
+    margin-top: 1rem;
 }
 
 .project-body p {
