--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,12 +213,13 @@ nav {
 }
 
 .project-revealer {
-    width: 100%;
-    height: 100%;
     background-color: var(--newPalette1);
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
+    -webkit-backface-visibility: hidden
 }
 
 .project-title {
