--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,7 @@ nav {
     /* bottom: -10%; */
     /* left: 2.5%; */
     /* transform: rotateX(80deg); */
-    animation: spin 2s forwards infinite linear;
+    /* animation: spin 2s forwards infinite linear; */
     /* transform-origin: center 62%; */
     /* transform-box: fill-box; */
     stroke-width: 25px;
