--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,22 +362,20 @@ nav {
 }
 
 .triangle-portal {
-    /* position: absolute; */
-    /* bottom: -10%; */
-    /* left: 2.5%; */
-    /* transform: rotateX(80deg); */
-    /* animation: spin 2s forwards infinite linear; */
-    animation: hover 1s forwards infinite ease-in-out;
+    transform: rotateX(80deg);
+    -webkit-transform: rotateX(80deg);
+    animation: spin 2s forwards infinite linear;
+    -webkit-animation: spin 2s forwards infinite linear;
     transform-origin: center 62%;
     transform-box: fill-box;
     stroke-width: 25px;
     width: 100%;
-    /* z-index: -1; */
 }
 
 @keyframes spin {
     to {
-        transform: rotateZ(360deg);
+        transform: rotateX(80deg) rotateZ(360deg);
+        -webkit-transform: rotateX(80deg) rotateZ(360deg);
     }
 }
 
