--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,7 @@ nav {
 #icosaTEST {
     width: 50%;
     animation: spin 2s linear forwards infinite;
+    stroke: hotpink;
 }
 
 .section-title {
@@ -367,15 +368,24 @@ nav {
     animation: spin 2s forwards infinite linear;
     -webkit-animation: spin 2s forwards infinite linear;
     transform-origin: center 62%;
+    -webkit-transform-origin: center 62%;
     transform-box: fill-box;
+    -webkit-transform-box: fill-box;
     stroke-width: 25px;
     width: 100%;
 }
 
+@-webkit-keyframes spin {
+    to {
+        -webkit-transform: rotateX(80deg) rotateZ(360deg);
+        transform: rotateX(80deg) rotateZ(360deg);
+    }
+}
+
 @keyframes spin {
     to {
-        transform: rotateX(80deg) rotateZ(360deg);
         -webkit-transform: rotateX(80deg) rotateZ(360deg);
+        transform: rotateX(80deg) rotateZ(360deg);
     }
 }
 
