--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,18 +362,16 @@ nav {
 }
 
 .triangle-portal {
-    -webkit-transform: translate3d(0,0,0);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: block;
-    -webkit-transform: rotateX(80deg);
-    transform: rotateX(80deg);
-    -webkit-animation: spin 2s forwards infinite linear;
-    animation: spin 21s forwards infinite linear;
-    -webkit-transform-origin: center 62%;
-    transform-origin: center 62%;
-    -webkit-transform-box: fill-box;
-    transform-box: fill-box;
+    
+    /* -webkit-animation: spin 2s forwards infinite linear; */
+    /* animation: spin 21s forwards infinite linear; */
+    /* -webkit-transform-origin: center 62%; */
+    /* transform-origin: center 62%; */
+    /* -webkit-transform-box: fill-box; */
+    /* transform-box: fill-box; */
     stroke-width: 25px;
     stroke: var(--Palette4);
     width: 100%;
