--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,7 +365,7 @@ nav {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     display: block;
-    
+    transform: rotateY(80deg);
     /* -webkit-animation: spin 2s forwards infinite linear; */
     /* animation: spin 21s forwards infinite linear; */
     /* -webkit-transform-origin: center 62%; */
@@ -373,7 +373,7 @@ nav {
     /* -webkit-transform-box: fill-box; */
     /* transform-box: fill-box; */
     stroke-width: 25px;
-    stroke: var(--Palette4);
+    stroke: var(--Palette5);
     width: 100%;
 }
 
