--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,7 @@ nav {
 .portal-scene {
     position: relative;
     /* min-height: 77vh; */
+    max-width: 50vh;
 }
 
 .tay-img-box {
@@ -312,7 +313,7 @@ nav {
 #github-svg {
     position: absolute;
     left: 15%;
-    bottom: 50%;
+    top: 40%;
     width: 7vh;
     animation: hover 1.6s forwards infinite ease-in-out;
 }
@@ -320,7 +321,7 @@ nav {
 #icosa1 {
     position: absolute;
     left: 28%;
-    bottom: 68%;
+    top: 20%;
     width: 4vh;
     animation: hover 1.2s forwards infinite ease-in-out;
     z-index: -1;
@@ -328,8 +329,8 @@ nav {
 
 #icosa2 {
     position: absolute;
-    left: 36%;
-    bottom: 22%;
+    left: 33%;
+    top: 69%;
     width: 3vh;
     /* transform: rotateZ(-5deg); */
     animation: hover 1.3s forwards infinite ease-in-out;
@@ -339,7 +340,7 @@ nav {
 #icosa3 {
     position: absolute;
     left: 66%;
-    bottom: 48%;
+    top: 42%;
     width: 3.3vh;
     /* transform: rotateZ(5deg); */
     animation: hover 1.4s forwards infinite ease-in-out;
@@ -348,7 +349,7 @@ nav {
 #linkedin-svg {
     position: absolute;
     left: 55%;
-    bottom: 35%;
+    top:57%;
     width: 8vh;
     animation: hover 1.7s forwards infinite ease-in-out;
 }
@@ -356,7 +357,7 @@ nav {
 #spotify-svg {
     position: absolute;
     left: 72%;
-    bottom: 65%;
+    top: 25%;
     width: 4.5vh;
     animation: hover 1.3s forwards infinite ease-in-out;
 }
